@@ -38,6 +38,7 @@ public class ThreadPoolMetrics
     public static final String COMPLETED_TASKS = "CompletedTasks";
     public static final String CURRENTLY_BLOCKED_TASKS = "CurrentlyBlockedTasks";
     public static final String TOTAL_BLOCKED_TASKS = "TotalBlockedTasks";
+    public static final String CORE_POOL_SIZE = "CorePoolSize";
     public static final String MAX_POOL_SIZE = "MaxPoolSize";
     public static final String MAX_TASKS_QUEUED = "MaxTasksQueued";
 
@@ -58,6 +59,9 @@ public class ThreadPoolMetrics
 
     /** Number of tasks that had blocked before being accepted (or rejected). */
     public final Counter totalBlocked;
+
+    /** Number of threads always available */
+    public final Gauge<Integer> corePoolSize;
 
     /** Maximum number of threads before it will start queuing tasks */
     public final Gauge<Integer> maxPoolSize;
@@ -85,6 +89,7 @@ public class ThreadPoolMetrics
         activeTasks = executor::getActiveTaskCount;
         pendingTasks = executor::getPendingTaskCount;
         completedTasks = executor::getCompletedTaskCount;
+        corePoolSize = executor::getCorePoolSize;
         maxPoolSize = executor::getMaximumPoolSize;
         maxTasksQueued = executor::getMaxTasksQueued;
     }
@@ -96,6 +101,7 @@ public class ThreadPoolMetrics
         Metrics.register(makeMetricName(path, poolName, COMPLETED_TASKS), completedTasks);
         Metrics.register(makeMetricName(path, poolName, CURRENTLY_BLOCKED_TASKS), currentBlocked);
         Metrics.register(makeMetricName(path, poolName, TOTAL_BLOCKED_TASKS), totalBlocked);
+        Metrics.register(makeMetricName(path, poolName, CORE_POOL_SIZE), corePoolSize);
         Metrics.register(makeMetricName(path, poolName, MAX_POOL_SIZE), maxPoolSize);
         Metrics.register(makeMetricName(path, poolName, MAX_TASKS_QUEUED), maxTasksQueued);
         return Metrics.register(this);
@@ -108,6 +114,7 @@ public class ThreadPoolMetrics
         Metrics.remove(makeMetricName(path, poolName, COMPLETED_TASKS));
         Metrics.remove(makeMetricName(path, poolName, CURRENTLY_BLOCKED_TASKS));
         Metrics.remove(makeMetricName(path, poolName, TOTAL_BLOCKED_TASKS));
+        Metrics.remove(makeMetricName(path, poolName, CORE_POOL_SIZE));
         Metrics.remove(makeMetricName(path, poolName, MAX_POOL_SIZE));
         Metrics.remove(makeMetricName(path, poolName, MAX_TASKS_QUEUED));
         Metrics.remove(this);
