@@ -33,6 +33,11 @@ public class TpStats extends NodeToolCmd
             description = "Output format (json, yaml)")
     private String outputFormat = "";
 
+    @Option(title = "verbose",
+            name = {"-v", "--verbose"},
+            description = "Display detailed metrics about thread pool's sizes")
+    private boolean verbose = false;
+
     @Override
     public void execute(NodeProbe probe)
     {
@@ -43,6 +48,6 @@ public class TpStats extends NodeToolCmd
 
         StatsHolder data = new TpStatsHolder(probe);
         StatsPrinter printer = TpStatsPrinter.from(outputFormat);
-        printer.print(data, probe.output().out);
+        printer.print(data, probe.output().out, verbose);
     }
 }
