@@ -20,15 +20,20 @@ package org.apache.cassandra.metrics;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.function.Function;
 import java.util.function.Supplier;
 
 import org.junit.Test;
 
 import org.apache.cassandra.Util;
-import org.apache.cassandra.concurrent.*;
+import org.apache.cassandra.concurrent.ExecutorPlus;
+import org.apache.cassandra.concurrent.SEPExecutor;
+import org.apache.cassandra.concurrent.SharedExecutorPool;
+import org.apache.cassandra.concurrent.ThreadPoolExecutorJMXAdapter;
+import org.apache.cassandra.concurrent.ThreadPoolExecutorPlus;
 
 import static org.apache.cassandra.concurrent.ExecutorFactory.Global.executorFactory;
-import static org.junit.Assert.*;
+import static org.junit.Assert.assertEquals;
 
 public class ThreadPoolMetricsTest
 {
@@ -40,7 +45,7 @@ public class ThreadPoolMetricsTest
                 .configurePooled("ThreadPoolMetricsTest-1", 2)
                 .withQueueLimit(2)
                 .build();
-        testMetricsWithNoBlockedThreads(executor, ((ThreadPoolExecutorJMXAdapter)executor.onShutdown()).metrics());
+        testMetricsWithNoBlockedThreads(executor, ((ThreadPoolExecutorJMXAdapter)executor.onShutdown()).metrics(), 2);
     }
 
     @Test
@@ -61,12 +66,13 @@ public class ThreadPoolMetricsTest
                                                                                                            "ThreadPoolMetricsTest-3",
                                                                                                            "internal");
 
-        testMetricsWithNoBlockedThreads(executor, executor.metrics);
+        testMetricsWithNoBlockedThreads(executor, executor.metrics, Integer.MAX_VALUE);
     }
 
     private static void testMetricsWithBlockedThreads(ExecutorPlus threadPool, ThreadPoolMetrics metrics)
     {
         assertEquals(2, metrics.maxPoolSize.getValue().intValue());
+        assertEquals(2, metrics.maxTasksQueued.getValue().intValue());
 
         spinAssertEquals(0, metrics.activeTasks::getValue);
         spinAssertEquals(0L, metrics.completedTasks::getValue);
@@ -88,6 +94,7 @@ public class ThreadPoolMetricsTest
         spinAssertEquals(0, metrics.pendingTasks::getValue);
         spinAssertEquals(0L, metrics.currentBlocked::getCount);
         spinAssertEquals(0L, metrics.totalBlocked::getCount);
+        spinAssertEquals(2, metrics.maxTasksQueued::getValue);
 
         // There are no threads available any more the 2 next tasks should go into the queue
         threadPool.execute(task3);
@@ -98,6 +105,7 @@ public class ThreadPoolMetricsTest
         spinAssertEquals(2, metrics.pendingTasks::getValue);
         spinAssertEquals(0L, metrics.currentBlocked::getCount);
         spinAssertEquals(0L, metrics.totalBlocked::getCount);
+        spinAssertEquals(0, metrics.maxTasksQueued::getValue);
 
         // The queue is full the 2 next task should go into blocked and block the thread
         BlockingTask task5 = new BlockingTask();
@@ -117,6 +125,7 @@ public class ThreadPoolMetricsTest
         spinAssertEquals(2, metrics.pendingTasks::getValue);
         spinAssertEquals(1L, metrics.currentBlocked::getCount);
         spinAssertEquals(1L, metrics.totalBlocked::getCount);
+        spinAssertEquals(0, metrics.maxTasksQueued::getValue);
 
         new Thread(() ->
         {
@@ -131,6 +140,7 @@ public class ThreadPoolMetricsTest
         spinAssertEquals(2, metrics.pendingTasks::getValue);
         spinAssertEquals(2L, metrics.currentBlocked::getCount);
         spinAssertEquals(2L, metrics.totalBlocked::getCount);
+        spinAssertEquals(0, metrics.maxTasksQueued::getValue);
 
         // Allowing first task to complete
         task1.allowToComplete();
@@ -142,6 +152,7 @@ public class ThreadPoolMetricsTest
         spinAssertEquals(1L, metrics.currentBlocked::getCount);
         spinAssertEquals(2L, metrics.totalBlocked::getCount);
         spinAssertEquals(1, blockedThreads::get);
+        spinAssertEquals(0, metrics.maxTasksQueued::getValue);
 
         // Allowing second task to complete
         task2.allowToComplete();
@@ -153,6 +164,7 @@ public class ThreadPoolMetricsTest
         spinAssertEquals(0L, metrics.currentBlocked::getCount);
         spinAssertEquals(2L, metrics.totalBlocked::getCount);
         spinAssertEquals(0, blockedThreads::get);
+        spinAssertEquals(0, metrics.maxTasksQueued::getValue);
 
         // Allowing third task to complete
         task3.allowToComplete();
@@ -163,6 +175,7 @@ public class ThreadPoolMetricsTest
         spinAssertEquals(1, metrics.pendingTasks::getValue);
         spinAssertEquals(0L, metrics.currentBlocked::getCount);
         spinAssertEquals(2L, metrics.totalBlocked::getCount);
+        spinAssertEquals(1, metrics.maxTasksQueued::getValue);
 
         // Allowing fourth task to complete
         task4.allowToComplete();
@@ -173,6 +186,7 @@ public class ThreadPoolMetricsTest
         spinAssertEquals(0, metrics.pendingTasks::getValue);
         spinAssertEquals(0L, metrics.currentBlocked::getCount);
         spinAssertEquals(2L, metrics.totalBlocked::getCount);
+        spinAssertEquals(2, metrics.maxTasksQueued::getValue);
 
         // Allowing last tasks to complete
         task5.allowToComplete();
@@ -183,15 +197,19 @@ public class ThreadPoolMetricsTest
         spinAssertEquals(0, metrics.pendingTasks::getValue);
         spinAssertEquals(0L, metrics.currentBlocked::getCount);
         spinAssertEquals(2L, metrics.totalBlocked::getCount);
+        spinAssertEquals(2, metrics.maxTasksQueued::getValue);
     }
 
-    private static void testMetricsWithNoBlockedThreads(ExecutorPlus threadPool, ThreadPoolMetrics metrics)
+    private static void testMetricsWithNoBlockedThreads(ExecutorPlus threadPool, ThreadPoolMetrics metrics, Integer initialMaxQueueSize)
     {
+        Integer maxQueueSize = initialMaxQueueSize;
+
         spinAssertEquals(0, metrics.activeTasks::getValue);
         spinAssertEquals(0L, metrics.completedTasks::getValue);
         spinAssertEquals(0, metrics.pendingTasks::getValue);
         spinAssertEquals(0L, metrics.currentBlocked::getCount);
         spinAssertEquals(0L, metrics.totalBlocked::getCount);
+        spinAssertEquals(maxQueueSize, metrics.maxTasksQueued::getValue);
 
         BlockingTask task1 = new BlockingTask();
         BlockingTask task2 = new BlockingTask();
@@ -206,6 +224,7 @@ public class ThreadPoolMetricsTest
         spinAssertEquals(0, metrics.pendingTasks::getValue);
         spinAssertEquals(0L, metrics.currentBlocked::getCount);
         spinAssertEquals(0L, metrics.totalBlocked::getCount);
+        spinAssertEquals(maxQueueSize, metrics.maxTasksQueued::getValue);
 
         threadPool.execute(task2);
 
@@ -214,6 +233,7 @@ public class ThreadPoolMetricsTest
         spinAssertEquals(0, metrics.pendingTasks::getValue);
         spinAssertEquals(0L, metrics.currentBlocked::getCount);
         spinAssertEquals(0L, metrics.totalBlocked::getCount);
+        spinAssertEquals(maxQueueSize, metrics.maxTasksQueued::getValue);
 
         // There are no threads available any more the 2 next tasks should go into the queue
         threadPool.execute(task3);
@@ -223,6 +243,8 @@ public class ThreadPoolMetricsTest
         spinAssertEquals(1, metrics.pendingTasks::getValue);
         spinAssertEquals(0L, metrics.currentBlocked::getCount);
         spinAssertEquals(0L, metrics.totalBlocked::getCount);
+        maxQueueSize = resolveMaxTasksQueued(maxQueueSize, v -> --v);
+        spinAssertEquals(maxQueueSize, metrics.maxTasksQueued::getValue);
 
         threadPool.execute(task4);
 
@@ -231,6 +253,8 @@ public class ThreadPoolMetricsTest
         spinAssertEquals(2, metrics.pendingTasks::getValue);
         spinAssertEquals(0L, metrics.currentBlocked::getCount);
         spinAssertEquals(0L, metrics.totalBlocked::getCount);
+        maxQueueSize = resolveMaxTasksQueued(maxQueueSize, v -> --v);
+        spinAssertEquals(maxQueueSize, metrics.maxTasksQueued::getValue);
 
         // Allowing first task to complete
         task1.allowToComplete();
@@ -241,6 +265,8 @@ public class ThreadPoolMetricsTest
         spinAssertEquals(1, metrics.pendingTasks::getValue);
         spinAssertEquals(0L, metrics.currentBlocked::getCount);
         spinAssertEquals(0L, metrics.totalBlocked::getCount);
+        maxQueueSize = resolveMaxTasksQueued(maxQueueSize, v -> ++v);
+        spinAssertEquals(maxQueueSize, metrics.maxTasksQueued::getValue);
 
         // Allowing second task to complete
         task2.allowToComplete();
@@ -251,6 +277,8 @@ public class ThreadPoolMetricsTest
         spinAssertEquals(0, metrics.pendingTasks::getValue);
         spinAssertEquals(0L, metrics.currentBlocked::getCount);
         spinAssertEquals(0L, metrics.totalBlocked::getCount);
+        maxQueueSize = resolveMaxTasksQueued(maxQueueSize, v -> ++v);
+        spinAssertEquals(maxQueueSize, metrics.maxTasksQueued::getValue);
 
         // Allowing third task to complete
         task3.allowToComplete();
@@ -260,6 +288,7 @@ public class ThreadPoolMetricsTest
         spinAssertEquals(0, metrics.pendingTasks::getValue);
         spinAssertEquals(0L, metrics.currentBlocked::getCount);
         spinAssertEquals(0L, metrics.totalBlocked::getCount);
+        spinAssertEquals(maxQueueSize, metrics.maxTasksQueued::getValue);
 
         // Allowing fourth task to complete
         task4.allowToComplete();
@@ -269,6 +298,21 @@ public class ThreadPoolMetricsTest
         spinAssertEquals(0, metrics.pendingTasks::getValue);
         spinAssertEquals(0L, metrics.currentBlocked::getCount);
         spinAssertEquals(0L, metrics.totalBlocked::getCount);
+        spinAssertEquals(maxQueueSize, metrics.maxTasksQueued::getValue);
+    }
+
+    private static Integer resolveMaxTasksQueued(Integer value, Function<Integer, Integer> operation)
+    {
+        if (value == Integer.MAX_VALUE)
+        {
+            // SEPExecutor doesn't care
+            return Integer.MAX_VALUE;
+        }
+        else
+        {
+            value = operation.apply(value);
+            return value;
+        }
     }
 
     private static void spinAssertEquals(Object expected, Supplier<Object> actualSupplier)
